fix add to first shelve